Finished OpenAccountTest.java

--- a/src/main/resources/properties/OR.properties
+++ b/src/main/resources/properties/OR.properties
@@ -12,3 +12,8 @@ firstName_CSS=input[ng-model="fName"]
 lastName_CSS=input[ng-model="lName"]
 postCode_CSS=input[ng-model="postCd"]
 addCustomerBtn_CSS=button[type="submit"]
+
+#Open Account Page
+customerSelect_CSS=select[name="userSelect"]
+currencySelect_CSS=select[name="currency"]
+submtBtn_CSS=button[type="submit"]
